correção final no ex 006

--- a/exercicios/ex10/ex006.html
+++ b/exercicios/ex10/ex006.html
@@ -8,7 +8,7 @@
     <style>
         div#area {
             font: normal 20pt Arial;
-            background: blue;
+            background: rgb(229, 255, 0);
             color: white;
             width: 200px;
             height: 200px;
@@ -34,6 +34,7 @@
         }
         function entrar() {
             area.innerText = 'Entrou!'
+            area.style.background = 'blue'
 
         }
         function sair() {
