--- a/exercicios/Aula 11/ex10.html
+++ b/exercicios/Aula 11/ex10.html
@@ -10,9 +10,8 @@
     <h1><strong>Sistemas de Multas</strong></h1>
     Velocidade do carro: <input type="number" name="txtvel" id="txtvel">Km/h.
     <input type="button" value="Verificar" onclick="calcular()"> 
-    <div id= "res">
-
-    </div>
+    <div id= "res"> </div>
+    
     <script>
         function calcular() {
             var txtv = window.document.getElementById('txtvel')
