desafio 2 - quase finalizado

--- a/desafios/desafio02/boasvindas.html
+++ b/desafios/desafio02/boasvindas.html
@@ -9,6 +9,12 @@
     <title>Desafio boas-vindas</title>
 </head>
 <body>
-    
+    <header><h1>Boas-vindas</h1></header>
+    <section>
+        <div>
+            <input type="button" value="Inicie o desafio" class="btn1" onclick="btn1()">
+        </div>
+    </section>
+    <footer>Desafio proposto pelo <a href="https://www.cursoemvideo.com" target="_blank">CursoemVídeo</a><br><p class="frase">Missão dada é missão comprida!</p></footer>
 </body>
 </html>
