--- a/desafios/desafio01/mensagens.html
+++ b/desafios/desafio01/mensagens.html
@@ -20,7 +20,7 @@
             </p>
         </div>
     </section>
-    <footer>Desafio proprosto pela Instituição <a href="https://www.cursoemvideo.com/">CursoemVídeo</a></footer>
+    <footer>Desafio proprosto pela Instituição <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVídeo</a></footer>
     <script src="script/mensagens.js"></script>
 </body>
 </html>
