--- a/exercicios/Aula 13/modelo1/modelo.html
+++ b/exercicios/Aula 13/modelo1/modelo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Aula 13/estilos/modelo.css">
+    <link rel="stylesheet" href="estilos/modelo.css">
     <title>Modelo de Exercício</title>
 </head>
 
