--- a/exercicios/Aula 12exe/modelo2/modelo2.html
+++ b/exercicios/Aula 12exe/modelo2/modelo2.html
@@ -36,7 +36,7 @@
         <p>&copy; CursoemVídeo</p>
     </footer>
 
-    <script src="scripts/script2.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
