--- a/exercicios/Aula 14exe/ex16/modelo.html
+++ b/exercicios/Aula 14exe/ex16/modelo.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super contador</title>
-    <link rel="stylesheet" href="estilos/modelo2.css">
+    <script src="scripts/script.js"></script>
+    <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
     <header>
@@ -14,9 +15,9 @@
     <section>
         <div id="dados">
            <p>Inicio: <input type="number" name="inicio" id="txti"></p>
-           <p>Fim: <input type="number" name="fim" id="texf"></p>
+           <p>Fim: <input type="number" name="fim" id="txtf"></p>
            <p>Passo: <input type="number" name="passo" id="txtp"></p>
-           <p><input type="button" value="Contar" onclick="Contar()"></p>
+           <input type="button" value="Contar" onclick="contar()">
         </div>
         <div id="res">
             Preparando a contagem...
@@ -25,6 +26,5 @@
     <footer>
         <p>&copy; CursoemVídeo</p>
     </footer>
-    <script src="scripts/script.js"></script>
 </body>
 </html>
