--- a/exercicios/Aula 14exe/ex17/modelo2.html
+++ b/exercicios/Aula 14exe/ex17/modelo2.html
@@ -6,30 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/modelo2.css">
-    <title>Verificador de Idade</title>
+    <title>Tabuada</title>
 </head>
 
 <body>
     <header>
-        <h1>Verificador de Idade</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            <p>Ano de Nascimento:
-                <input type="number" name="txtano" id="txtano" min="0">
-            </p>
-            <p>Sexo:
-                <input type="radio" name="radsex" id="masc" checked>
-                <label for="masc">Masculino</label>
-                <input type="radio" name="radsex" id="fem">
-                <label for="fem">Feminino</label>
-            </p>
-            <p>
-                <input type="button" value="Verificar" onclick="verificar()">
-            </p>
+            <p>Número: <input type="number" name="num" id="txtn">
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
-        <div id="res">
-            *Preencha os dados ácima para ver o resultado!
+        <div>
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número ácima.</option>
+            </select>
         </div>
     </section>
     <footer>
