--- a/exercicios/Aula 16exe/modelo1/index.html
+++ b/exercicios/Aula 16exe/modelo1/index.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analisador de Números</title>
-
     <link rel="stylesheet" href="src/style.css">
-    <script src="src/analisador.js"></script>
-
 </head>
 <body>
     <header>
@@ -16,16 +13,19 @@
     </header>
     <section>
         <div>
-            <p>Número (entre 1 e 100): <input type="number" name="num" id="txtn">
-            <input type="button" value="Adicionar" onclick="analisador()"></p>
+            Número (entre 1 e 100): 
+            <input type="number" name="fnum" id="fnum">
+            <input type="button" value="Adicionar" onclick="adicionar()">
+            <br><br><select name="flista" id="flista" size="6"></select>
+            <br><input type="button" value="Finalizar" onclick="finalizar()">
         </div>
-        <div>
-            <select name="tab" id="seltab" size="6">
-                <option>Adicione um valor ácima.</option>
-            </select><br>
-            <input type="button" value="Finalizar">
+        <div id="res">
+
         </div>
     </section>
-    <footer><p>&copy; <a href="https://github.com/GabrielSantos9" target="_blank">GabrielSantos9</a></p></footer>
+    <footer>
+        <p>&copy; <a href="https://github.com/GabrielSantos9" target="_blank">GabrielSantos9</a></p>
+    </footer>
+    <script src="src/analisador.js"></script>
 </body>
 </html>
