--- a/desafios/desafio04/calculartroco.html
+++ b/desafios/desafio04/calculartroco.html
@@ -16,7 +16,7 @@
     </header>
     <section>
         <div>
-            <input type="button" value="Comprar Produto" class="btn1">
+            <input type="button" value="Comprar Produto" class="btn1" onclick="comprarproduto()">
         </div>
     </section>
     <footer><p><abbr title="Copyright">&copy;</abbr> <a href="https://github.com/GabrielSantos9" target="_blank">GabrielSantos</a></p></footer>
