--- a/desafios/desafio05/conversor.html
+++ b/desafios/desafio05/conversor.html
@@ -20,9 +20,15 @@
             <input type="button" value="Converter"  class="btn1" onclick="converter()">
             <p class="aviso"> Clique no botão ácima para começar.</p>
         </div>
-        <div id="res">
-
-        </div>
+        
+            <div class="config" id="res"></div>
+            <div class="config" id="res2"></div>
+            <div class="config" id="res3"></div>
+            <div class="config" id="res4"></div>
+            <div class="config" id="res5"></div>
+            <div class="config" id="res6"></div>
+            <div class="config" id="res7"></div>
+        
     </main>
     <footer>
         <p><abbr title="Copyright">&copy;</abbr> <a href="https://github.com/gabrielsantos9/" target="_blank">GabrielSantos</a></p>
