--- a/desafios/desafio05/conversor-medidas.html
+++ b/desafios/desafio05/conversor-medidas.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="src/imagens/icone site.png" type="image/x-icon">
     <title>Conversor</title>
 
-    <link rel="stylesheet" href="src/conversor.css">
-    <script src="src/conversor.js"></script>
+    <link rel="stylesheet" href="src/conversor-medidas.css">
+    <script src="src/conversor-medidas.js"></script>
 
 </head>
 <body>
