--- a/desafios/desafio05/conversor-medidas.html
+++ b/desafios/desafio05/conversor-medidas.html
@@ -16,19 +16,10 @@
         <h1>Conversor de Medidas</h1>
     </header>
     <main>
-        <div>
+        <div id="res">
             <input type="button" value="Converter"  class="btn1" onclick="converter()">
             <p class="aviso"> Clique no botão ácima para começar.</p>
         </div>
-        
-            <div class="config" id="res"></div>
-            <div class="config" id="res2"></div>
-            <div class="config" id="res3"></div>
-            <div class="config" id="res4"></div>
-            <div class="config" id="res5"></div>
-            <div class="config" id="res6"></div>
-            <div class="config" id="res7"></div>
-        
     </main>
     <footer>
         <p><abbr title="Copyright">&copy;</abbr> <a href="https://github.com/gabrielsantos9/" target="_blank">GabrielSantos</a></p>
