--- a/desafios/desafio07/conversaomoeda.html
+++ b/desafios/desafio07/conversaomoeda.html
@@ -20,6 +20,9 @@
             <input type="button" value="Converter"  class="btn1" onclick="converter()">
             <p class="aviso"> Clique no botão ácima para começar.</p>
         </div>
+        <div class="res">
+            
+        </div>
     </section>
     <footer>
         <p><abbr title="Copyright">&copy;</abbr> <a href="https://github.com/gabrielsantos9/" target="_blank">GabrielSantos</a></p>
