--- a/desafios/desafio07/conversaomoeda.html
+++ b/desafios/desafio07/conversaomoeda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="src/img/1f7e2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="src/img/icone-site.png" type="image/x-icon">
     <title>Conversor R$ -> US$</title>
 
     <link rel="stylesheet" href="src/conversaomoeda.css">
