--- a/desafios/desafio06/conversor-temperatura.html
+++ b/desafios/desafio06/conversor-temperatura.html
@@ -16,9 +16,12 @@
         <h1>Conversor de Temperatura</h1>
     </header>
     <section>
-        <div class="div1">
+        <div>
             <input type="button" value="Converter"  class="btn1" onclick="converter()">
             <p class="aviso"> Clique no botão ácima para começar.</p>
+        </div>
+        <div class="res">
+            
         </div>
     </section>
     <footer>
