--- a/desafios/desafio05/conversor-medidas.html
+++ b/desafios/desafio05/conversor-medidas.html
@@ -16,9 +16,12 @@
         <h1>Conversor de Medidas</h1>
     </header>
     <main>
-        <div id="res">
+        <div>
             <input type="button" value="Converter"  class="btn1" onclick="converter()">
             <p class="aviso"> Clique no botão ácima para começar.</p>
+        </div>
+        <div class="res">
+            
         </div>
     </main>
     <footer>
