--- a/desafios/desafio04/calculartroco.html
+++ b/desafios/desafio04/calculartroco.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="src/img/icone-site.png" type="image/x-icon">
     <title>Calculador de Troco</title>
 
     <link rel="stylesheet" href="src/calculartroco.css">
@@ -15,9 +16,7 @@
         <h1>Calculando o Troco</h1>
     </header>
     <section>
-
             <input type="button" value="Comprar Produto" class="btn1" onclick="comprarproduto()">
-
     </section>
     <footer><p><abbr title="Copyright">&copy;</abbr> <a href="https://github.com/GabrielSantos9" target="_blank">GabrielSantos</a></p></footer>
 </body>
