--- a/desafios/desafio02/boasvindas.html
+++ b/desafios/desafio02/boasvindas.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo/boasvindas.css">
-    <script src="script/boasvindas.js"></script>
+<link rel="shortcut icon" href="src/img/icone-site.png" type="image/x-icon">
     <title>Desafio boas-vindas</title>
+
+    <link rel="stylesheet" href="src/boasvindas.css">
+    <script src="src/boasvindas.js"></script>
+
 </head>
 <body>
-    <header><h1>Boas-vindas</h1></header>
+    <header>
+        <h1>Boas-vindas</h1>
+    </header>
     <section>
         <div>
             <input type="button" value="Inicie o desafio" class="btn1" onclick="btn1()">
         </div>
     </section>
-    <footer>Desafio proposto pelo <a href="https://www.cursoemvideo.com" target="_blank">CursoemVídeo</a><br><p class="frase">Missão dada é missão comprida!</p></footer>
+    <footer>
+        <p><abbr title="Copyright">&copy;</abbr> <a href="https://github.com/gabrielsantos9/" target="_blank">GabrielSantos</a></p>
+    </footer>
 </body>
 </html>
