--- a/desafios/desafio01/mensagens.html
+++ b/desafios/desafio01/mensagens.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/mensagens.css">
+    <link rel="shortcut icon" href="src/img/icone-site.png" type="image/x-icon">
     <title>Mensagens</title>
+
+    <link rel="stylesheet" href="src/mensagens.css">
+    <script src="src/mensagens.js"></script>
+
 </head>
 <body>
     <header>
@@ -13,14 +17,13 @@
     </header>
     <section>
         <div>
-            <p>
                 <input type="button" value="Botão 1" class="btn" onclick="btn1()">
                 <input type="button" value="Botão 2" class="btn" onclick="btn2()">
                 <input type="button" value="Botão 3" class="btn" onclick="btn3()">
-            </p>
         </div>
     </section>
-    <footer>Desafio proprosto pela Instituição <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVídeo</a></footer>
-    <script src="script/mensagens.js"></script>
+    <footer>
+        <p><abbr title="Copyright">&copy;</abbr> <a href="https://github.com/gabrielsantos9/" target="_blank">GabrielSantos</a></p>
+    </footer>
 </body>
 </html>
