--- a/desafios/desafio10/bhaskara.html
+++ b/desafios/desafio10/bhaskara.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="src/img/icone-site.png" type="image/x-icon">
     <title>Fórmula de Bhaskara</title>
 
-    <link rel="stylesheet" href="src/reajuste.css">
-    <script src="src/reajuste.js"></script>
+    <link rel="stylesheet" href="src/bhaskara.css">
+    <script src="src/bhaskara.js"></script>
 
 </head>
 <body>
@@ -18,7 +18,7 @@
     <section>
         <div>
             <input type="button" value="Calcular"  class="btn1" onclick="calcular()">
-            <p class="aviso">Considerando uma equação no formato <strong>ax² + bx + c = 0</strong>, aperte o botão acima para calcular o valor de <strong>&#x0394;.</strong></p>
+            <p class="aviso">Considerando uma equação no formato <strong>ax² + bx + c = 0</strong>, aperte o botão acima para calcular o valor de <strong>&#x0394;</strong>.</p>
         </div>
         <div class="res">
             
