--- a/desafios/desafio12/precomudou.html
+++ b/desafios/desafio12/precomudou.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1>Preço subiu</h1>
+        <h1>Preço mudou</h1>
     </header>
     <section>
         <div>
