--- a/exercicios/Aula 18/Aula 2/object2.html
+++ b/exercicios/Aula 18/Aula 2/object2.html
@@ -13,7 +13,7 @@
 <body>
     <style>
         body {
-            background-color: dodgerblue;
+            background-color: navy;
             font: normal 15pt Arial; 
         }
         
